[package]
name = "analysis_joukou"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
daachorse = "1.0.0"
regex = "1.7.3"
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "1.0.40"
