[package]
name = "analysis_law_reference"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
daachorse = "1.0.0"
regex = "1.7.3"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tracing = "0.1.37"
tokio = { version = "1.28.1", features = ["full"] }
tokio-stream = "0.1.14"
clap = { version = "4.3.0", features = ["derive"] }
quick-xml = { version = "0.28.2", features = ["encoding"] }
encoding_rs = "0.8.32"
listup_law = { git="https://github.com/japanese-law-analysis/listup_law.git", rev="ad34a38"}
jplaw_text = { git="https://github.com/japanese-law-analysis/jplaw_text.git", rev="84135d3"}
tracing-subscriber = "0.3.17"
